Therion 5.4.3 (in progress):

therion:
 * bugs fixed:
   - add and use PROJ grid files in the windows distribution
   - fix comment and code typos [PR#127]

--------------------------------------------------------------------------------

Therion 5.4.2 (2019-01-08):

therion:
 * added -color option to select command
 * added lookup command to configuration
 * support for 3D models generated from splay shots
 * added support for label customization
 * added scrap distortions to SQL export
 * therion uses system libproj by default [PR#118,121]
 * metapost output is reproducible now [PR#117]
 * updated Spanish, German, Russian, Bulgarian, Portuguese, Catalan, French,
   Czech and English translations and messages
   [PR#77,78,82,83,94,95,102,103,105,107,108,109,112]
 * thbook updates [PR#76,98]
 * bugs fixed:
   - KML with multiple outer polygon outlines
   - other minor bugfixes

xtherion:
 * support for scrap shifting
 * bugs fixed:
   - fix problems with selection/copy/paste for text editors [PR#86]
   - mouse zooming fixed
   - disappearing menu fixed

loch:
 * bugs fixed:
   - displaying LRUD envelope for surface & splay shots
   - surface transparency rendering

--------------------------------------------------------------------------------

Therion 5.4.1 (2017-04-18):

therion:
 * added fonts-setup layout option
 * added min-symbol-scale layout option
 * added support for -scale <number> for point and line symbols
   (1.0 ≡ medium symbol size)
 * updated Russian translation [PR#73,74]
 * bugs fixed:
   - remove debugging output when reading Survex err files
   - don't accept stddev <= 0

--------------------------------------------------------------------------------

Therion 5.4.0 (2017-04-03):

infrastructure:
 * github.com/therion repos created
 * added support for mxe.cc cross-compiler
 * travis-ci.org integration

therion:
 * include UISv1 grade definitions [PR#6]
 * new ini file option: tex-fonts-optional