@@ -17,6 +17,6 @@ https://therion.speleo.sk/wiki/doku.php
 
 Web page: https://therion.speleo.sk
 
-Copyright (c) 1999-2017 Stacho Mudrak, Martin Budaj
+Copyright (c) 1999-2019 Stacho Mudrak, Martin Budaj
 
 Distributed free under the GNU General Public License
